# steklov-arap

./: .gitignore  AGENTS.md  README.md  pyproject.toml
meshes/: golem_components.json
scripts/: mesh_components.py  visualize_matrices.py
src/steklov_arap/: __init__.py  __main__.py  arap.py  arap_ui.py  arap_ui_special.py  steklov.py  steklov_fake.py
tests/: analyze_exterior_steklov.py  analyze_steklov_stiffness.py  arap_test_notebook.py  compare_laplacians.py  conftest.py  inspect_dtn.py  test_arap.py  test_arap_manager.py  test_steklov_cache.py
